sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:8: error: ';' expected but 'else' found.
      else {
      ^